[package]
name = "service_hub"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.36"
flume = { version = "0.10.7" }
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }

[[bin]]
name = "main"
path = "./src/lib.rs"
